5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1684_1879.log
== SUBMITION (2019-04-19 13:18:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
n=int(input(":"))

if(n==92):
    print("Manaus")
elif(n==61):
    print("Brasilia")
elif(n==71):
    print("Salvador")
elif(n==11):
    print("Sao Paulo")
elif(n==32):
    print("Juiz de Fora")
elif(n==19):
    print("Campinas")
elif(n==27):
    print("Vitoria")
elif(n==31):
    print("Belo Horizonte")
elif(n==91):
    print("Belem")
else:
    print("DDD nao cadastrado")

-- EXECUTION TIME:
0.180713
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
DDD nao cadastrado
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:

-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
DDD nao cadastrado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 13:19:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
n=int(input(":"))

if(n==92):
    print("Manaus")
elif(n==61):
    print("Brasilia")
elif(n==71):
    print("Salvador")
elif(n==11):
    print("Sao Paulo")
elif(n==32):
    print("Juiz de Fora")
elif(n==19):
    print("Campinas")
elif(n==27):
    print("Vitoria")
elif(n==31):
    print("Belo Horizonte")
elif(n==91):
    print("Belem")
else:
    print("DDD nao cadastrado")

-- EXECUTION TIME:
0.125537
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
DDD nao cadastrado
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:

-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
DDD nao cadastrado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:58:49) 
-- CODE:
he= float(input("he:"))
hf= float(input("hf:"))
h= (he)-((1/4)*hf)
print(he, "extras e",f,"de falta")
if(he>400):
	mensagem= 500.00
	print("R$", round(mensagem, 2))
else:
	mensagem= 100.00
	print("R$", round(mensagem, 2))
	
-- EXECUTION TIME:
0.273971
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1684/1879/main.py", line 4, in <module>
    print(he, "extras e",f,"de falta")
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:59:23) 
-- CODE:
he= float(input("he:"))
hf= float(input("hf:"))
h= (he)-((1/4)*hf)
print(he, "extras e",hf,"de falta")
if(he>400):
	mensagem= 500.00
	print("R$", round(mensagem, 2))
else:
	mensagem= 100.00
	print("R$", round(mensagem, 2))
	
-- EXECUTION TIME:
0.151931
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 500.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:59:33) 
-- CODE:
he= float(input("he:"))
hf= float(input("hf:"))
h= (he)-((1/4)*hf)
print(he, "extras e",hf,"de falta")
if(he>400):
	mensagem= 500.00
	print("R$", round(mensagem, 2))
else:
	mensagem= 100.00
	print("R$", round(mensagem, 2))
	
-- EXECUTION TIME:
0.154356
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 500.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 22:00:28) 
-- CODE:
he= float(input("he:"))
hf= float(input("hf:"))
h= (he-(1/4*hf))
print(he, "extras e",hf,"de falta")
if(he>400):
	mensagem= 500.00
	print("R$", round(mensagem, 2))
else:
	mensagem= 100.00
	print("R$", round(mensagem, 2))
	
-- EXECUTION TIME:
0.199693
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 500.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 22:02:37) 
-- CODE:
he= float(input("he:"))
hf= float(input("hf:"))
h= (he-(1/4*hf))
print(he, "extras e",hf,"de falta")
if(he> 400):
	mensagem= 500.00
	print("R$", round(mensagem, 2))
else:
	mensagem= 100.00
	print("R$", round(mensagem, 2))
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 22:03:48) 
-- CODE:
he= float(input("he:"))
hf= float(input("hf:"))
h= (he-(1/4*hf))
print(he, "extras e",hf,"de falta")
if(he> 400):
	mensagem= 500.00
	print("R$", round(mensagem, 2))
else:
	mensagem= 100.00
	print("R$", round(mensagem, 2))
	
-- EXECUTION TIME:
0.130385
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 500.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 22:04:57) 
-- CODE:
he= float(input("he:"))
hf= float(input("hf:"))
h= (he-(1/4*hf))
print(he, "extras e",hf,"de falta")
if(h> 400):
	mensagem= 500.00
	print("R$", round(mensagem, 2))
else:
	mensagem= 100.00
	print("R$", round(mensagem, 2))
	
-- EXECUTION TIME:
0.124427
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
